# event_calendar_project

./: README.md  pyproject.toml
apps/events/: admin.py  models.py  serializers.py  views.py
apps/events/migrations/: 0001_initial.py
apps/integrations/: admin.py  google_calendar.py  models.py  serializers.py  urls.py  views.py
apps/integrations/migrations/: 0001_initial.py
apps/notifications/: admin.py  models.py  serializers.py  tasks.py  utils.py  views.py
apps/notifications/migrations/: 0001_initial.py
apps/teams/: admin.py  models.py  serializers.py  urls.py  views.py
apps/teams/migrations/: 0001_initial.py
apps/users/: admin.py  models.py  serializers.py  views.py
apps/users/migrations/: 0001_initial.py
celery_app/: celery.py
config/: settings.py  urls.py
static/css/: calendar.css  style.css
static/js/: calendar.js  modal.js
templates/: base.html  index.html
templates/events/: modal_edit_event.html
